# interview

./: .gitmodules  client.py  pyproject.toml  requirements.txt  run.sh  server.py  utils.py
results/FedAdagrad(accept_failures=True)2024-05-07_15-27-48_results.pkl/: results.pkl
results/FedAdagrad(accept_failures=True)2024-05-07_16-04-52_results.pkl/: results.pkl
results/FedAdagrad(accept_failures=True)2024-05-07_18-45-42_results.pkl/: results.pkl
results/FedAdam(accept_failures=True)2024-05-07_15-39-42_results.pkl/: results.pkl
results/FedAdam(accept_failures=True)2024-05-07_16-15-01_results.pkl/: results.pkl
results/FedAdam(accept_failures=True)2024-05-07_18-56-09_results.pkl/: results.pkl
results/FedAvg(accept_failures=True)2024-05-07_15-15-55_results.pkl/: results.pkl
results/FedAvg(accept_failures=True)2024-05-07_15-54-47_results.pkl/: results.pkl
results/FedAvg(accept_failures=True)2024-05-07_18-35-03_results.pkl/: results.pkl
results/FedYogi(accept_failures=True)2024-05-07_16-25-01_results.pkl/: results.pkl
